feat(Z1NEW): add home page layout

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,9 +1,10 @@
 .main {
+  // max-width: 1280px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 6rem 3rem;
+  padding: 6rem 5rem;
   h1 {
     font-size: 4rem;
   }
