--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,7 +1,7 @@
 @import '../../scss/abstracts/variables';
 .button {
   cursor: pointer;
-  display: inline-block;
+  display: block;
   height: 2rem;
   width: 6rem;
   text-align: center;
